kubernetes/apps/infrastructure/longhorn/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-main
spec:
  parentRefs:
      - group: gateway.networking.k8s.io
        kind: Gateway
        name: web-internal
        namespace: kube-system
        sectionName: https
  hostnames:
    - storage.devpi.de
  rules:
    - backendRefs:
        - kind: Service
          group: ''
          port: 80
          name: longhorn-frontend
      matches:
        - path:
            type: PathPrefix
            value: /
